improved ServoDriverService to allow using a servo driver as gpio module